// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockTransactions Component matches error snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="transactions"
      >
        <h2>
          Transactions of Block 
          123
        </h2>
        <span
          class="error"
        >
          Error: 
          Something went wrong!
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="transactions"
    >
      <h2>
        Transactions of Block 
        123
      </h2>
      <span
        class="error"
      >
        Error: 
        Something went wrong!
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`BlockTransactions Component matches loading snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="transactions"
      >
        <h2>
          Transactions of Block 
          123
        </h2>
        <span>
          Loading...
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="transactions"
    >
      <h2>
        Transactions of Block 
        123
      </h2>
      <span>
        Loading...
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`BlockTransactions Component matches rendered snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="transactions"
      >
        <h2>
          Transactions of Block 
          123
        </h2>
        <div
          class="search"
        >
          <span>
            Search address
          </span>
          <input
            placeholder="Search"
            type="text"
          />
        </div>
        <div
          class="data-container"
        >
          <div
            class="info-column"
          >
            <div>
              <span>
                Transaction Hash
              </span>
              <span>
                0x5182e0cd0bd8
              </span>
            </div>
            <div>
              <span>
                From
              </span>
              <span>
                0xAe45a8240
              </span>
            </div>
            <div>
              <span>
                To
              </span>
              <span>
                0x7fA4737Ea
              </span>
            </div>
          </div>
          <div
            class="info-row"
          >
            <div>
              <span>
                Gas Limit
              </span>
              <span>
                28980706
              </span>
            </div>
            <div>
              <span>
                Gas Price
              </span>
              <span>
                78757192354
              </span>
            </div>
            <div>
              <span>
                Value
              </span>
              <span>
                11116000000000000
              </span>
            </div>
            <div>
              <span>
                NONCE
              </span>
              <span>
                23456
              </span>
            </div>
          </div>
        </div>
        <div
          class="data-container"
        >
          <div
            class="info-column"
          >
            <div>
              <span>
                Transaction Hash
              </span>
              <span>
                0x5182e0cd1e58
              </span>
            </div>
            <div>
              <span>
                From
              </span>
              <span>
                0xA7EFAe72
              </span>
            </div>
            <div>
              <span>
                To
              </span>
              <span>
                0x7fA4737Ea
              </span>
            </div>
          </div>
          <div
            class="info-row"
          >
            <div>
              <span>
                Gas Limit
              </span>
              <span>
                28980706
              </span>
            </div>
            <div>
              <span>
                Gas Price
              </span>
              <span>
                78757192354
              </span>
            </div>
            <div>
              <span>
                Value
              </span>
              <span>
                11116000000000000
              </span>
            </div>
            <div>
              <span>
                NONCE
              </span>
              <span>
                23456
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="transactions"
    >
      <h2>
        Transactions of Block 
        123
      </h2>
      <div
        class="search"
      >
        <span>
          Search address
        </span>
        <input
          placeholder="Search"
          type="text"
        />
      </div>
      <div
        class="data-container"
      >
        <div
          class="info-column"
        >
          <div>
            <span>
              Transaction Hash
            </span>
            <span>
              0x5182e0cd0bd8
            </span>
          </div>
          <div>
            <span>
              From
            </span>
            <span>
              0xAe45a8240
            </span>
          </div>
          <div>
            <span>
              To
            </span>
            <span>
              0x7fA4737Ea
            </span>
          </div>
        </div>
        <div
          class="info-row"
        >
          <div>
            <span>
              Gas Limit
            </span>
            <span>
              28980706
            </span>
          </div>
          <div>
            <span>
              Gas Price
            </span>
            <span>
              78757192354
            </span>
          </div>
          <div>
            <span>
              Value
            </span>
            <span>
              11116000000000000
            </span>
          </div>
          <div>
            <span>
              NONCE
            </span>
            <span>
              23456
            </span>
          </div>
        </div>
      </div>
      <div
        class="data-container"
      >
        <div
          class="info-column"
        >
          <div>
            <span>
              Transaction Hash
            </span>
            <span>
              0x5182e0cd1e58
            </span>
          </div>
          <div>
            <span>
              From
            </span>
            <span>
              0xA7EFAe72
            </span>
          </div>
          <div>
            <span>
              To
            </span>
            <span>
              0x7fA4737Ea
            </span>
          </div>
        </div>
        <div
          class="info-row"
        >
          <div>
            <span>
              Gas Limit
            </span>
            <span>
              28980706
            </span>
          </div>
          <div>
            <span>
              Gas Price
            </span>
            <span>
              78757192354
            </span>
          </div>
          <div>
            <span>
              Value
            </span>
            <span>
              11116000000000000
            </span>
          </div>
          <div>
            <span>
              NONCE
            </span>
            <span>
              23456
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
